# patato-library

./: CMakeLists.txt  Classifier.cpp  Classifier.h  PatatoClass.cpp  PatatoClass.h  PatatoClassifier.cpp  PatatoClassifier.h  PotatoClass.cpp  PotatoClassifier.cpp  PotatoClassifier.h  Prediction.cpp  Prediction.h  README.md
